sync up branches

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>alex</title>
+  <title>Matakite</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <div id="app"></div>
